<resources>
    <string name="app_name">BaseLib</string>
    <string name="footer_no_more">没有更多</string>
    <string name="footer_failed">加载失败</string>
    <string name="footer_success">加载完成</string>
    <string name="title_activity_debug">DebugActivity</string>

    <string name="image_choose_title">选择图片</string>
    <string name="image_choose_gallery">相册</string>
    <string name="image_choose_camera">相机</string>

    <string name="title_more">更多</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_image_preview">ImagePreviewActivity</string>

    <string name="time_just_now">刚刚</string>
    <string name="time_minutes_age">%1$d分钟前</string>
    <string name="time_hours_ago">%1$d小时前</string>

    <string name="hint_search_tip">输入搜索内容...</string>

    <string name="tab_me">我</string>

    <string name="text_me_focus">关注</string>
    <string name="text_me_follows">粉丝</string>
    <string name="text_me_charge">充值</string>

    <string name="btn_ok">确定</string>
    <string name="btn_agree">同意</string>

    <string name="tab_comment">点评</string>
    <string name="tab_course">课程</string>

    <string name="hint_login_account">请输入手机号</string>
    <string name="hint_login_pwd">请输入密码</string>
    <string name="hint_login_find_pwd">忘记密码?</string>
    <string name="hint_register_code">请输入验证码</string>
    <string name="hint_register_confirm_pwd">请确认密码</string>

    <string name="text_login_auth">其他账号登录</string>
    <string name="text_we_chat">微信</string>
    <string name="text_sina">新浪微博</string>
    <string name="text_qq">QQ</string>
    <string name="text_moments">朋友圈</string>
    <string name="text_qzone">QQ空间</string>
    <string name="text_circel">美术圈</string>
    <string name="text_agreement">我同意并遵守&quot;美术圈&quot;用户协议</string>
    <string name="text_get_register_code">获取验证码</string>
    <string name="text_please_wait">请稍等...</string>
    <string name="text_user_role_tip">请选择自己的身份</string>
    <string name="text_role_student">学生</string>
    <string name="text_role_studio">画室/机构</string>
    <string name="text_role_teacher">老师</string>
    <string name="text_role_parent">家长</string>
    <string name="text_role_fans">爱好者</string>
    <string name="text_go_on">继续</string>
    <string name="text_share_to">分享到</string>
    <string name="text_count_rex">( %1$d )</string>
    <string name="text_save_image">保存图片</string>
    <string name="text_profile">头像</string>
    <string name="text_nick_name">昵称</string>
    <string name="text_gender">性别</string>
    <string name="text_role">身份</string>
    <string name="text_province">省份</string>
    <string name="text_department">所在机构</string>
    <string name="text_school">所在学校</string>
    <string name="text_title_me">个人信息</string>
    <string name="text_camera">拍照</string>
    <string name="text_gallery">图库</string>
    <string name="text_gender_male">男</string>
    <string name="text_gender_female">女</string>
    <string name="text_quit_login">退出登录</string>
    <string name="text_my_collection">我的收藏</string>
    <string name="text_my_cache">我的缓存</string>
    <string name="text_my_subscription">我的订阅</string>
    <string name="text_my_vip">VPI会员(%1$d天)</string>
    <string name="text_my_feedback">意见反馈</string>
    <string name="text_setting">设置</string>
    <string name="text_clear_cache">清理缓存</string>
    <string name="text_check_for_update">检测更新</string>
    <string name="text_about_us">关于我们</string>
    <string name="text_star_me">我要评分</string>
    <string name="text_about_meishuquan">关于美术圈</string>
    <string name="text_do_not_blame_me">免责声明</string>
    <string name="text_about_current_version">当前版本%1$s</string>
    <string name="text_clear_cache_delete_file_count">清理完成,共清理%1$d个缓存文件</string>
    <string name="text_checking_for_update">正在检查更新...</string>
    <string name="text_wechat_payment">微信支付</string>
    <string name="text_ali_payment">支付宝支付</string>
    <string name="text_follows_count">关注(%1$d)</string>
    <string name="text_fans_count">粉丝(%1$d)</string>
    <string name="text_share">分享</string>
    <string name="text_open_in_out_browser">用浏览器打开</string>
    <string name="text_cancel_subscription">取消缓存</string>
    <string name="text_say_something">我来说两句...</string>
    <string name="text_start_all">全部开始</string>
    <string name="text_stop_all">全部暂停</string>
    <string name="text_edit_mode">编辑</string>
    <string name="text_access_user_info_error">获取用户资料失败,点击进行登录</string>
    <string name="text_access_without_login">跳过</string>

    <string name="toast_login_failed">登录失败:%1$s</string>
    <string name="toast_login_empty_account">请填写手机号</string>
    <string name="toast_login_empty_pwd">请输入密码</string>
    <string name="toast_register_code_requested">验证码已发生,请注意查收</string>
    <string name="toast_register_empty_code">请输入验证码</string>
    <string name="toast_register_error_code">验证码错误,请重新输入</string>
    <string name="toast_register_empty_pwd_confirm">请输入确认密码</string>
    <string name="toast_register_empty_pwd_cannot_confirm">确认密码不相符</string>
    <string name="toast_register_short_pwd">密码长度必须大于6位</string>
    <string name="toast_register_agreement_not_checked">请先同意用户协议</string>
    <string name="toast_reset_pwd_success">修改密码完成,请重新登录</string>
    <string name="toast_reset_pwd_failed">修改密码失败:%1$s</string>
    <string name="toast_role_at_least_choose_one">请选择一个角色</string>
    <string name="toast_register_success">注册成功</string>
    <string name="toast_register_failed">注册失败:%1$s</string>
    <string name="toast_submit_verify_code_error">验证码已过期</string>
    <string name="toast_verify_phone_illegal_format">手机号码格式错误</string>
    <string name="toast_verify_not_match">验证码错误</string>
    <string name="toast_verify_too_soon">验证码请求过于频繁</string>
    <string name="toast_share_success">分享成功</string>
    <string name="toast_share_failed">分享失败</string>
    <string name="toast_share_cancel">分享取消</string>
    <string name="toast_user_name_empty">用户名不能为空</string>
    <string name="toast_user_name_to_long">用户名长度不能超过%1$d</string>
    <string name="toast_update_success">更新成功</string>
    <string name="toast_update_failed">更新失败:%1$s</string>
    <string name="toast_app_not_found_for_this_action">为发现应用可以响应此请求</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_reset_pwd">重置密码</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_cache">离线缓存</string>
    <string name="title_activity_downloading">正在缓存</string>
    <string name="title_activity_subscription">我的订阅</string>
    <string name="title_activity_followers_list">关注列表</string>
    <string name="title_activity_fans_list">粉丝列表</string>

    <string name="title_activity_role_choose">选择身份</string>

    <string name="dock_item_news_title">头条</string>
    <string name="dock_item_comment_title">点评</string>
    <string name="dock_item_course_title">课程</string>
    <string name="dock_item_discovery_title">发现</string>
    <string name="dock_item_me_title">我</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_full_screen">FullScreenActivity</string>
</resources>
