<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="@drawable/divider_horizontal"
            android:showDividers="middle"
            android:dividerPadding="@dimen/margin_big"
            >
            <com.metis.base.widget.KeyValueLayout
                android:id="@+id/home_page_profile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:key="@string/text_profile"
                />
            <com.metis.base.widget.KeyValueLayout
                android:id="@+id/home_page_nickname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:key="@string/text_nick_name"
                />
            <com.metis.base.widget.KeyValueLayout
                android:id="@+id/home_page_gender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:key="@string/text_gender"
                />
            <com.metis.base.widget.KeyValueLayout
                android:id="@+id/home_page_role"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:key="@string/text_role"
                />
            <com.metis.base.widget.KeyValueLayout
                android:id="@+id/home_page_province"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:key="@string/text_province"
                />
            <com.metis.base.widget.KeyValueLayout
                android:id="@+id/home_page_department"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:visibility="gone"
                app:key="@string/text_department"
                />
            <TextView
                android:id="@+id/home_page_quit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/margin_big"
                android:text="@string/text_quit_login"
                android:gravity="center"
                android:background="@android:color/white"
                android:textSize="@dimen/std_size_h1"
                android:textColor="@android:color/black"
                android:padding="@dimen/padding_middle"
                android:visibility="gone"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>