<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.metis.base.activity.RegisterActivity"
    android:paddingLeft="@dimen/padding_big"
    android:paddingRight="@dimen/padding_big"
    >
    <EditText
        android:id="@+id/register_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:padding="@dimen/padding_middle"
        android:background="@android:color/transparent"
        android:hint="@string/hint_login_account"
        android:layout_marginTop="@dimen/margin_large"
        android:inputType="phone"
        />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/color_c2"
        android:layout_centerVertical="true"
        />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/register_get_code"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_red_btn"
            android:text="@string/text_get_register_code"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_h1"
            android:layout_alignTop="@+id/register_code"
            android:layout_alignBottom="@+id/register_code"
            android:paddingRight="@dimen/padding_big"
            android:paddingLeft="@dimen/padding_big"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/register_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/register_get_code"
            android:padding="@dimen/padding_middle"
            android:background="@android:color/transparent"
            android:hint="@string/hint_register_code"
            android:singleLine="true"
            android:inputType="number"
            />
    </RelativeLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/color_c2"
        android:layout_centerVertical="true"
        />
    <EditText
        android:id="@+id/register_pwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textPassword"
        android:padding="@dimen/padding_middle"
        android:background="@android:color/transparent"
        android:hint="@string/hint_login_pwd"
        />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/color_c2"
        android:layout_centerVertical="true"
        />
    <EditText
        android:id="@+id/register_pwd_confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textPassword"
        android:padding="@dimen/padding_middle"
        android:background="@android:color/transparent"
        android:hint="@string/hint_register_confirm_pwd"
        />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/color_c2"
        android:layout_centerVertical="true"
        />
    <RelativeLayout
        android:id="@+id/register_agreement_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/register_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:checked="true"
            />
        <TextView
            android:id="@+id/register_agreement_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/register_agreement"
            android:layout_centerVertical="true"
            android:text="@string/text_agreement"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/register_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:gravity="center"
        android:text="@string/title_activity_register"
        android:background="@drawable/bg_red_btn"
        android:textSize="@dimen/size_h1"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/margin_large"
        android:paddingTop="@dimen/padding_middle"
        android:paddingBottom="@dimen/padding_middle"
        />
</LinearLayout>
