<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.metis.base.activity.AboutActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >
            <com.metis.base.widget.KeyValueLayout
                android:id="@+id/about_star_me"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:background="@drawable/std_list_item_bg"
                app:key="@string/text_star_me"
                app:editable="true"
                />
            <com.metis.base.widget.KeyValueLayout
                android:id="@+id/about_meishuquan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:background="@drawable/std_list_item_bg"
                app:key="@string/text_about_meishuquan"
                app:editable="true"
                />
            <com.metis.base.widget.KeyValueLayout
                android:id="@+id/about_do_not_blame_me"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:background="@drawable/std_list_item_bg"
                app:key="@string/text_do_not_blame_me"
                app:editable="true"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
