<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.metis.base.activity.SettingActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >
            <com.metis.base.widget.KeyValueLayout
                android:id="@+id/setting_clear_cache"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:background="@drawable/std_list_item_bg"
                app:editable="true"
                app:key="@string/text_clear_cache"
                />
            <com.metis.base.widget.KeyValueLayout
                android:id="@+id/setting_check_for_update"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:background="@drawable/std_list_item_bg"
                app:editable="true"
                app:key="@string/text_check_for_update"
                />
            <com.metis.base.widget.KeyValueLayout
                android:id="@+id/setting_about_us"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:background="@drawable/std_list_item_bg"
                app:editable="true"
                app:key="@string/text_about_us"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
