<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.metis.base.activity.LoginActivity">
    <LinearLayout
        android:id="@+id/login_auth"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/padding_big"
        >
        <LinearLayout
            android:id="@+id/login_auth_we_chat"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_wechat"
                android:layout_margin="@dimen/margin_middle"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_we_chat"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/login_auth_sina"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sina"
                android:layout_margin="@dimen/margin_middle"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_sina"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/login_auth_qq"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_qq"
                android:layout_margin="@dimen/margin_middle"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_qq"
                />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/login_auth_tip_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_auth"
        android:paddingLeft="@dimen/padding_big"
        android:paddingRight="@dimen/padding_big"
        >
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_toLeftOf="@+id/login_auth_tip"
            android:background="@color/color_c2"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/login_auth_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login_auth"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/margin_big"
            android:layout_marginRight="@dimen/margin_big"
            />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_toRightOf="@+id/login_auth_tip"
            android:background="@color/color_c2"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_above="@+id/login_auth_tip_container"
        android:layout_marginTop="@dimen/margin_large"
        android:paddingLeft="@dimen/padding_big"
        android:paddingRight="@dimen/padding_big"
        >
        <EditText
            android:id="@+id/login_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/hint_login_account"
            android:padding="@dimen/padding_middle"
            android:background="@android:color/transparent"
            android:inputType="phone"
            />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/color_c2"
            android:layout_centerVertical="true"
            />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/login_pwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_login_pwd"
                android:padding="@dimen/padding_middle"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                />
            <TextView
                android:id="@+id/login_find_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:hint="@string/hint_login_find_pwd"
                android:layout_marginRight="@dimen/padding_big"
                />
        </RelativeLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/color_c2"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/login_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:gravity="center"
            android:text="@string/title_activity_login"
            android:background="@drawable/bg_red_btn"
            android:textSize="@dimen/size_h1"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/margin_large"
            android:paddingTop="@dimen/padding_middle"
            android:paddingBottom="@dimen/padding_middle"
            />
    </LinearLayout>

</RelativeLayout>
