<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.metis.base.widget.TitleBar
        android:id="@+id/me_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/me_title_bar"
        android:visibility="gone"
        >
        <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="@drawable/divider_horizontal"
            android:showDividers="middle"
            android:dividerPadding="@dimen/margin_big"
            >
            <RelativeLayout
                android:id="@+id/me_profile_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/std_list_item_bg"
                android:layout_marginTop="@dimen/margin_big"
                >
                <ImageView
                    android:id="@+id/me_profile"
                    android:layout_width="@dimen/profile_size_big"
                    android:layout_height="@dimen/profile_size_big"
                    android:layout_margin="@dimen/margin_big"
                    />
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/me_profile"
                    android:layout_toLeftOf="@+id/me_edit_flag"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/me_name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/std_size_h2"
                        />
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:id="@+id/me_extras_follows"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                        <TextView
                            android:id="@+id/me_extras_fans"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_middle"
                            />
                    </LinearLayout>
                </LinearLayout>
                <ImageView
                    android:id="@+id/me_edit_flag"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_editable_flag"
                    android:layout_margin="@dimen/margin_big"
                    />
            </RelativeLayout>
            <com.metis.base.widget.IconTextView
                android:id="@+id/me_collection"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/std_list_item_bg"
                android:layout_marginTop="@dimen/margin_big"
                app:iconRes="@drawable/ic_collection"
                app:text="@string/text_my_collection"
                app:canEdit="true"
                />
            <com.metis.base.widget.IconTextView
                android:id="@+id/me_cache"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/std_list_item_bg"
                app:iconRes="@drawable/ic_cache"
                app:text="@string/text_my_cache"
                app:canEdit="true"
                />
            <com.metis.base.widget.IconTextView
                android:id="@+id/me_subscription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/std_list_item_bg"
                app:iconRes="@drawable/ic_substription"
                app:text="@string/text_my_subscription"
                app:canEdit="true"
                />
            <com.metis.base.widget.IconTextView
                android:id="@+id/me_vip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/std_list_item_bg"
                android:layout_marginTop="@dimen/margin_big"
                app:iconRes="@drawable/ic_vip"
                app:text="@string/text_my_vip"
                app:canEdit="true"
                />
            <com.metis.base.widget.IconTextView
                android:id="@+id/me_feedback"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/std_list_item_bg"
                android:layout_marginTop="@dimen/margin_big"
                app:iconRes="@drawable/ic_feedback"
                app:text="@string/text_my_feedback"
                app:canEdit="true"
                />
            <com.metis.base.widget.IconTextView
                android:id="@+id/me_setting"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/std_list_item_bg"
                android:layout_marginTop="@dimen/margin_big"
                app:iconRes="@drawable/ic_setting"
                app:text="@string/text_setting"
                app:canEdit="true"
                />
        </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/me_title_bar"
        >
        <fragment
            android:id="@+id/me_home_page_fragment"
            android:name="com.metis.base.fragment.HomePageFragment"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            />
        <TextView
            android:id="@+id/me_home_page_error_tip"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/text_access_user_info_error"
            android:gravity="center_horizontal"
            android:padding="@dimen/padding_big"
            android:visibility="gone"
            android:background="@android:color/white"
            />
    </FrameLayout>

</RelativeLayout>